2A/05_Projet_GL/src/test/deca/context/valid/complet/76_call_equals.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024


{
    Object o1 ;
    Object o2 ;
    o1.equals(o2);
}