2A/05_Projet_GL/src/test/deca/context/invalid/complet/97_equals_main.deca
// Description :
//  tester la methode equals du Object dans main 
// Resultats :
//    ligne 10 :  le int ne peut pas être affecté à Object
// Historique : 
//  cree le 18/01/2024

{
    Object o ;
    o.equals(1 );    
}